--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
